refactor: chnaged names from bodiesList to bodyList
